# Symbios

./: CMakeLists.txt
assets/shaders/: clear.frag  cloud.frag  default.frag  default.vert  generate.frag  image.frag  multiply.frag  ocean.frag  shade.frag  shadow.frag  turing.frag
scripts/: make_noise.py
src/: main.cpp
